add more styles & get results from API

--- a/index.html
+++ b/index.html
@@ -5,29 +5,27 @@
     <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body> 
+  <body>
     <header class="header">
       <h1>Movie App 🍿🍿🍿</h1>
-    </header> 
+    </header>
+    <div class="get-data">
+      <button class="button" id="button">Get Popular Movies </button>
+    </div>
     <div class="container">
       <div class="grid">
-        <div class="card">
+        <!-- <div class="card">
           <div class="card-img--container"></div>
-          <img src="/image.jpeg" alt="">
+          <img src="/image.jpeg" alt="" />
           <div class="card-info--container">
             <p>movie title</p>
             <span class="badge badge-primary">rating / popularity</span>
             <span class="badge badge-success">vote_count</span>
           </div>
         </div>
-
-        </div>
-
-
+       -->
       </div>
     </div>
-
-
 
     <script src="app.js"></script>
   </body>
