--- a/index.html
+++ b/index.html
@@ -13,20 +13,11 @@
       <button class="button" id="button">Get Popular Movies </button>
     </div>
     <div class="container">
-      <div class="grid">
-        <!-- <div class="card">
-          <div class="card-img--container"></div>
-          <img src="/image.jpeg" alt="" />
-          <div class="card-info--container">
-            <p>movie title</p>
-            <span class="badge badge-primary">rating / popularity</span>
-            <span class="badge badge-success">vote_count</span>
-          </div>
-        </div>
-       -->
+      <div class="grid"> 
+        <div id="results"></div>
+       
       </div>
     </div>
-
     <script src="app.js"></script>
   </body>
 </html>
