--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <button class="button" id="button">Get Popular Movies </button>
     </div>
     <div class="container">
-      <div class="grid"> 
+      <div class="grid" id="grid"> 
         <div id="results"></div>
        
       </div>
