--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <h1 class="error" id="error"></h1>
     <div class="get-data">
       <button class="button" id="button">Get Popular Movies</button>
-      <input
+      <!-- <input
         type="text"
         class="get-data--search"
         id="searchbtn"
         placeholder="Search Movies"
       />
-      <button class="get-data--button" id="btn-search">Search Movies</button>
+      <button class="get-data--button" id="btn-search">Search Movies</button> -->
     </div>
     <div class="container">
       <div class="grid" id="grid">
